projeto_comp/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: functions_and_declarations $end

    1 functions_and_declarations: function_defenition
    2                           | function_declaration
    3                           | declaration
    4                           | functions_and_declarations function_defenition
    5                           | functions_and_declarations function_declaration
    6                           | functions_and_declarations declaration

    7 function_defenition: typespec function_declarator function_body

    8 function_body: LBRACE declarations_and_statements RBRACE
    9              | LBRACE RBRACE

   10 declarations_and_statements: declaration
   11                            | statement
   12                            | declaration declarations_and_statements
   13                            | statement declarations_and_statements

   14 function_declaration: typespec function_declarator SEMI

   15 function_declarator: IDENTIFIER LPAR parameter_list RPAR

   16 parameter_list: parameter_declaration
   17               | parameter_list COMMA parameter_declaration

   18 parameter_declaration: typespec IDENTIFIER
   19                      | typespec

   20 declaration: typespec declarator_repetition SEMI
   21            | error SEMI

   22 declarator_repetition: declarator
   23                      | declarator_repetition COMMA declarator

   24 typespec: CHAR
   25         | INT
   26         | VOID
   27         | SHORT
   28         | DOUBLE

   29 declarator: IDENTIFIER ASSIGN expression
   30           | IDENTIFIER

   31 statement: expression SEMI
   32          | SEMI
   33          | LBRACE statement_repetition RBRACE
   34          | LBRACE RBRACE
   35          | IF LPAR expression RPAR statement
   36          | IF LPAR expression RPAR statement ELSE statement
   37          | WHILE LPAR expression RPAR statement
   38          | RETURN expression SEMI
   39          | RETURN SEMI
   40          | LBRACE error RBRACE
   41          | WHILE LPAR expression RPAR error
   42          | IF LPAR expression RPAR error
   43          | IF LPAR expression RPAR statement ELSE error
   44          | IF LPAR expression RPAR error ELSE statement
   45          | IF LPAR expression RPAR error ELSE error

   46 statement_repetition: statement
   47                     | statement_repetition statement
   48                     | statement_repetition error

   49 expression: expression ASSIGN expression
   50           | expression COMMA expression
   51           | expression PLUS expression
   52           | expression MINUS expression
   53           | expression MUL expression
   54           | expression DIV expression
   55           | expression MOD expression
   56           | expression OR expression
   57           | expression AND expression
   58           | expression BITWISEAND expression
   59           | expression BITWISEOR expression
   60           | expression BITWISEXOR expression
   61           | expression EQ expression
   62           | expression NE expression
   63           | expression LE expression
   64           | expression GE expression
   65           | expression LT expression
   66           | expression GT expression
   67           | PLUS expression
   68           | MINUS expression
   69           | NOT expression
   70           | IDENTIFIER LPAR expression RPAR
   71           | IDENTIFIER LPAR RPAR
   72           | IDENTIFIER
   73           | NATURAL
   74           | CHRLIT
   75           | DECIMAL
   76           | LPAR expression RPAR
   77           | IDENTIFIER LPAR error RPAR
   78           | LPAR error RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21 40 41 42 43 44 45 48 77 78
    CHAR (258) 24
    ELSE (259) 36 43 44 45
    WHILE (260) 37 41
    IF (261) 35 36 42 43 44 45
    INT (262) 25
    SHORT (263) 27
    DOUBLE (264) 28
    RETURN (265) 38 39
    VOID (266) 26
    BITWISEAND (267) 58
    BITWISEOR (268) 59
    BITWISEXOR (269) 60
    AND (270) 57
    ASSIGN (271) 29 49
    MUL (272) 53
    COMMA (273) 17 23 50
    DIV (274) 54
    EQ (275) 61
    GE (276) 64
    GT (277) 66
    LBRACE (278) 8 9 33 34 40
    LE (279) 63
    LPAR (280) 15 35 36 37 41 42 43 44 45 70 71 76 77 78
    LT (281) 65
    MINUS (282) 52 68
    MOD (283) 55
    NE (284) 62
    NOT (285) 69
    OR (286) 56
    PLUS (287) 51 67
    RBRACE (288) 8 9 33 34 40
    RPAR (289) 15 35 36 37 41 42 43 44 45 70 71 76 77 78
    SEMI (290) 14 20 21 31 32 38 39
    RESERVED (291)
    IDENTIFIER <token> (292) 15 18 29 30 70 71 72 77
    NATURAL <token> (293) 73
    DECIMAL <token> (294) 75
    CHRLIT <token> (295) 74
    LOGIC (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    functions_and_declarations <node> (43)
        on left: 1 2 3 4 5 6
        on right: 0 4 5 6
    function_defenition <node> (44)
        on left: 7
        on right: 1 4
    function_body <node> (45)
        on left: 8 9
        on right: 7
    declarations_and_statements <node> (46)
        on left: 10 11 12 13
        on right: 8 12 13
    function_declaration <node> (47)
        on left: 14
        on right: 2 5
    function_declarator <node> (48)
        on left: 15
        on right: 7 14
    parameter_list <node> (49)
        on left: 16 17
        on right: 15 17
    parameter_declaration <node> (50)
        on left: 18 19
        on right: 16 17
    declaration <node> (51)
        on left: 20 21
        on right: 3 6 10 12
    declarator_repetition <node> (52)
        on left: 22 23
        on right: 20 23
    typespec <node> (53)
        on left: 24 25 26 27 28
        on right: 7 14 18 19 20
    declarator <node> (54)
        on left: 29 30
        on right: 22 23
    statement <node> (55)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 11 13 35 36 37 43 44 46 47
    statement_repetition <node> (56)
        on left: 46 47 48
        on right: 33 47 48
    expression <node> (57)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 29 31 35 36 37 38 41 42 43 44 45 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 76


State 0

    0 $accept: • functions_and_declarations $end
    1 functions_and_declarations: • function_defenition
    2                           | • function_declaration
    3                           | • declaration
    4                           | • functions_and_declarations function_defenition
    5                           | • functions_and_declarations function_declaration
    6                           | • functions_and_declarations declaration
    7 function_defenition: • typespec function_declarator function_body
   14 function_declaration: • typespec function_declarator SEMI
   20 declaration: • typespec declarator_repetition SEMI
   21            | • error SEMI
   24 typespec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    functions_and_declarations  go to state 7
    function_defenition         go to state 8
    function_declaration        go to state 9
    declaration                 go to state 10
    typespec                    go to state 11


State 1

   21 declaration: error • SEMI

    SEMI  shift, and go to state 12


State 2

   24 typespec: CHAR •

    $default  reduce using rule 24 (typespec)


State 3

   25 typespec: INT •

    $default  reduce using rule 25 (typespec)


State 4

   27 typespec: SHORT •

    $default  reduce using rule 27 (typespec)


State 5

   28 typespec: DOUBLE •

    $default  reduce using rule 28 (typespec)


State 6

   26 typespec: VOID •

    $default  reduce using rule 26 (typespec)


State 7

    0 $accept: functions_and_declarations • $end
    4 functions_and_declarations: functions_and_declarations • function_defenition
    5                           | functions_and_declarations • function_declaration
    6                           | functions_and_declarations • declaration
    7 function_defenition: • typespec function_declarator function_body
   14 function_declaration: • typespec function_declarator SEMI
   20 declaration: • typespec declarator_repetition SEMI
   21            | • error SEMI
   24 typespec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    $end    shift, and go to state 13
    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    function_defenition   go to state 14
    function_declaration  go to state 15
    declaration           go to state 16
    typespec              go to state 11


State 8

    1 functions_and_declarations: function_defenition •

    $default  reduce using rule 1 (functions_and_declarations)


State 9

    2 functions_and_declarations: function_declaration •

    $default  reduce using rule 2 (functions_and_declarations)


State 10

    3 functions_and_declarations: declaration •

    $default  reduce using rule 3 (functions_and_declarations)


State 11

    7 function_defenition: typespec • function_declarator function_body
   14 function_declaration: typespec • function_declarator SEMI
   15 function_declarator: • IDENTIFIER LPAR parameter_list RPAR
   20 declaration: typespec • declarator_repetition SEMI
   22 declarator_repetition: • declarator
   23                      | • declarator_repetition COMMA declarator
   29 declarator: • IDENTIFIER ASSIGN expression
   30           | • IDENTIFIER

    IDENTIFIER  shift, and go to state 17

    function_declarator    go to state 18
    declarator_repetition  go to state 19
    declarator             go to state 20


State 12

   21 declaration: error SEMI •

    $default  reduce using rule 21 (declaration)


State 13

    0 $accept: functions_and_declarations $end •

    $default  accept


State 14

    4 functions_and_declarations: functions_and_declarations function_defenition •

    $default  reduce using rule 4 (functions_and_declarations)


State 15

    5 functions_and_declarations: functions_and_declarations function_declaration •

    $default  reduce using rule 5 (functions_and_declarations)


State 16

    6 functions_and_declarations: functions_and_declarations declaration •

    $default  reduce using rule 6 (functions_and_declarations)


State 17

   15 function_declarator: IDENTIFIER • LPAR parameter_list RPAR
   29 declarator: IDENTIFIER • ASSIGN expression
   30           | IDENTIFIER •  [COMMA, SEMI]

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 30 (declarator)


State 18

    7 function_defenition: typespec function_declarator • function_body
    8 function_body: • LBRACE declarations_and_statements RBRACE
    9              | • LBRACE RBRACE
   14 function_declaration: typespec function_declarator • SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    function_body  go to state 25


State 19

   20 declaration: typespec declarator_repetition • SEMI
   23 declarator_repetition: declarator_repetition • COMMA declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 20

   22 declarator_repetition: declarator •

    $default  reduce using rule 22 (declarator_repetition)


State 21

   29 declarator: IDENTIFIER ASSIGN • expression
   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 36


State 22

   15 function_declarator: IDENTIFIER LPAR • parameter_list RPAR
   16 parameter_list: • parameter_declaration
   17               | • parameter_list COMMA parameter_declaration
   18 parameter_declaration: • typespec IDENTIFIER
   19                      | • typespec
   24 typespec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    parameter_list         go to state 37
    parameter_declaration  go to state 38
    typespec               go to state 39


State 23

    8 function_body: LBRACE • declarations_and_statements RBRACE
    9              | LBRACE • RBRACE
   10 declarations_and_statements: • declaration
   11                            | • statement
   12                            | • declaration declarations_and_statements
   13                            | • statement declarations_and_statements
   20 declaration: • typespec declarator_repetition SEMI
   21            | • error SEMI
   24 typespec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE
   31 statement: • expression SEMI
   32          | • SEMI
   33          | • LBRACE statement_repetition RBRACE
   34          | • LBRACE RBRACE
   35          | • IF LPAR expression RPAR statement
   36          | • IF LPAR expression RPAR statement ELSE statement
   37          | • WHILE LPAR expression RPAR statement
   38          | • RETURN expression SEMI
   39          | • RETURN SEMI
   40          | • LBRACE error RBRACE
   41          | • WHILE LPAR expression RPAR error
   42          | • IF LPAR expression RPAR error
   43          | • IF LPAR expression RPAR statement ELSE error
   44          | • IF LPAR expression RPAR error ELSE statement
   45          | • IF LPAR expression RPAR error ELSE error
   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    error       shift, and go to state 1
    CHAR        shift, and go to state 2
    WHILE       shift, and go to state 40
    IF          shift, and go to state 41
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 42
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 43
    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    RBRACE      shift, and go to state 44
    SEMI        shift, and go to state 45
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    declarations_and_statements  go to state 46
    declaration                  go to state 47
    typespec                     go to state 48
    statement                    go to state 49
    expression                   go to state 50


State 24

   14 function_declaration: typespec function_declarator SEMI •

    $default  reduce using rule 14 (function_declaration)


State 25

    7 function_defenition: typespec function_declarator function_body •

    $default  reduce using rule 7 (function_defenition)


State 26

   23 declarator_repetition: declarator_repetition COMMA • declarator
   29 declarator: • IDENTIFIER ASSIGN expression
   30           | • IDENTIFIER

    IDENTIFIER  shift, and go to state 51

    declarator  go to state 52


State 27

   20 declaration: typespec declarator_repetition SEMI •

    $default  reduce using rule 20 (declaration)


State 28

   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   76           | LPAR • expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR
   78           | LPAR • error RPAR

    error       shift, and go to state 53
    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 54


State 29

   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   68           | MINUS • expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 55


State 30

   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   69           | NOT • expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 56


State 31

   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   67           | PLUS • expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 57


State 32

   70 expression: IDENTIFIER • LPAR expression RPAR
   71           | IDENTIFIER • LPAR RPAR
   72           | IDENTIFIER •  [BITWISEAND, BITWISEOR, BITWISEXOR, AND, ASSIGN, MUL, COMMA, DIV, EQ, GE, GT, LE, LT, MINUS, MOD, NE, OR, PLUS, RPAR, SEMI]
   77           | IDENTIFIER • LPAR error RPAR

    LPAR  shift, and go to state 58

    $default  reduce using rule 72 (expression)


State 33

   73 expression: NATURAL •

    $default  reduce using rule 73 (expression)


State 34

   75 expression: DECIMAL •

    $default  reduce using rule 75 (expression)


State 35

   74 expression: CHRLIT •

    $default  reduce using rule 74 (expression)


State 36

   29 declarator: IDENTIFIER ASSIGN expression •  [COMMA, SEMI]
   49 expression: expression • ASSIGN expression
   50           | expression • COMMA expression
   51           | expression • PLUS expression
   52           | expression • MINUS expression
   53           | expression • MUL expression
   54           | expression • DIV expression
   55           | expression • MOD expression
   56           | expression • OR expression
   57           | expression • AND expression
   58           | expression • BITWISEAND expression
   59           | expression • BITWISEOR expression
   60           | expression • BITWISEXOR expression
   61           | expression • EQ expression
   62           | expression • NE expression
   63           | expression • LE expression
   64           | expression • GE expression
   65           | expression • LT expression
   66           | expression • GT expression

    BITWISEAND  shift, and go to state 59
    BITWISEOR   shift, and go to state 60
    BITWISEXOR  shift, and go to state 61
    AND         shift, and go to state 62
    ASSIGN      shift, and go to state 63
    MUL         shift, and go to state 64
    DIV         shift, and go to state 66
    EQ          shift, and go to state 67
    GE          shift, and go to state 68
    GT          shift, and go to state 69
    LE          shift, and go to state 70
    LT          shift, and go to state 71
    MINUS       shift, and go to state 72
    MOD         shift, and go to state 73
    NE          shift, and go to state 74
    OR          shift, and go to state 75
    PLUS        shift, and go to state 76

    $default  reduce using rule 29 (declarator)

    Conflict between rule 29 and token COMMA resolved as reduce (COMMA < ASSIGN).


State 37

   15 function_declarator: IDENTIFIER LPAR parameter_list • RPAR
   17 parameter_list: parameter_list • COMMA parameter_declaration

    COMMA  shift, and go to state 77
    RPAR   shift, and go to state 78


State 38

   16 parameter_list: parameter_declaration •

    $default  reduce using rule 16 (parameter_list)


State 39

   18 parameter_declaration: typespec • IDENTIFIER
   19                      | typespec •  [COMMA, RPAR]

    IDENTIFIER  shift, and go to state 79

    $default  reduce using rule 19 (parameter_declaration)


State 40

   37 statement: WHILE • LPAR expression RPAR statement
   41          | WHILE • LPAR expression RPAR error

    LPAR  shift, and go to state 80


State 41

   35 statement: IF • LPAR expression RPAR statement
   36          | IF • LPAR expression RPAR statement ELSE statement
   42          | IF • LPAR expression RPAR error
   43          | IF • LPAR expression RPAR statement ELSE error
   44          | IF • LPAR expression RPAR error ELSE statement
   45          | IF • LPAR expression RPAR error ELSE error

    LPAR  shift, and go to state 81


State 42

   38 statement: RETURN • expression SEMI
   39          | RETURN • SEMI
   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    SEMI        shift, and go to state 82
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    expression  go to state 83


State 43

   31 statement: • expression SEMI
   32          | • SEMI
   33          | • LBRACE statement_repetition RBRACE
   33          | LBRACE • statement_repetition RBRACE
   34          | • LBRACE RBRACE
   34          | LBRACE • RBRACE
   35          | • IF LPAR expression RPAR statement
   36          | • IF LPAR expression RPAR statement ELSE statement
   37          | • WHILE LPAR expression RPAR statement
   38          | • RETURN expression SEMI
   39          | • RETURN SEMI
   40          | • LBRACE error RBRACE
   40          | LBRACE • error RBRACE
   41          | • WHILE LPAR expression RPAR error
   42          | • IF LPAR expression RPAR error
   43          | • IF LPAR expression RPAR statement ELSE error
   44          | • IF LPAR expression RPAR error ELSE statement
   45          | • IF LPAR expression RPAR error ELSE error
   46 statement_repetition: • statement
   47                     | • statement_repetition statement
   48                     | • statement_repetition error
   49 expression: • expression ASSIGN expression
   50           | • expression COMMA expression
   51           | • expression PLUS expression
   52           | • expression MINUS expression
   53           | • expression MUL expression
   54           | • expression DIV expression
   55           | • expression MOD expression
   56           | • expression OR expression
   57           | • expression AND expression
   58           | • expression BITWISEAND expression
   59           | • expression BITWISEOR expression
   60           | • expression BITWISEXOR expression
   61           | • expression EQ expression
   62           | • expression NE expression
   63           | • expression LE expression
   64           | • expression GE expression
   65           | • expression LT expression
   66           | • expression GT expression
   67           | • PLUS expression
   68           | • MINUS expression
   69           | • NOT expression
   70           | • IDENTIFIER LPAR expression RPAR
   71           | • IDENTIFIER LPAR RPAR
   72           | • IDENTIFIER
   73           | • NATURAL
   74           | • CHRLIT
   75           | • DECIMAL
   76           | • LPAR expression RPAR
   77           | • IDENTIFIER LPAR error RPAR
   78           | • LPAR error RPAR

    error       shift, and go to state 84
    WHILE       shift, and go to state 40
    IF          shift, and go to state 41
    RETURN      shift, and go to state 42
    LBRACE      shift, and go to state 43
    LPAR        shift, and go to state 28
    MINUS       shift, and go to state 29
    NOT         shift, and go to state 30
    PLUS        shift, and go to state 31
    RBRACE      shift, and go to state 85
    SEMI        shift, and go to state 45
    IDENTIFIER  shift, and go to state 32
    NATURAL     shift, and go to state 33
    DECIMAL     shift, and go to state 34
    CHRLIT      shift, and go to state 35

    statement             go to state 86
    statement_repetition  go to state 87
    expression            go to state 50


State 44

    9 function_body: LBRACE RBRACE •

    $default  reduce using rule 9 (function_body)


State 45

   32 statement: SEMI •

    $default  reduce using rule 32 (statement)


State 46

    8 function_body: LBRACE declarations_and_statements • RBRACE

    RBRACE  shift, and go to state 88


State 47
